# yo-laborate

./: .gitignore  .gitmodules  README.md  changelog.md  classes.example.json  config.example.ini  config.ini  dataset_config_example.py  open_labeling-0.2.1-py3-none-any.whl  pyproject.toml  requirements.txt  run_workflows.py  wrangling_example.py
.wheels/: open_labeling-0.2.10-py3-none-any.whl  open_labeling-0.2.11-py3-none-any.whl  open_labeling-0.2.12-py3-none-any.whl  open_labeling-0.2.13-py3-none-any.whl  open_labeling-0.2.14-py3-none-any.whl  open_labeling-0.2.15-py3-none-any.whl  open_labeling-0.2.16-py3-none-any.whl  open_labeling-0.2.18-py3-none-any.whl  open_labeling-0.2.19-py3-none-any.whl  open_labeling-0.2.2-py3-none-any.whl  open_labeling-0.2.20-py3-none-any.whl  open_labeling-0.2.21-py3-none-any.whl  open_labeling-0.2.22-py3-none-any.whl  open_labeling-0.2.23-py3-none-any.whl  open_labeling-0.2.3-py3-none-any.whl  open_labeling-0.2.4-py3-none-any.whl  open_labeling-0.2.5-py3-none-any.whl  open_labeling-0.2.6-py3-none-any.whl  open_labeling-0.2.7-py3-none-any.whl  open_labeling-0.2.9-py3-none-any.whl
run_scripts/: run_gcs_downloaders.py  run_mine.py  run_stats.py  run_validation.py  run_visualise.py  run_wrangle.py  run_yo_valuate.py
tests/: test_yo_valuate.py
tests/test_data/classification/: truth.csv
tests/test_data/classification/labels/: Photo_1.txt  Photo_2.txt  Photo_3.txt  Photo_4.txt
tests/test_data/config_file_ensemble_model_root/: config.ini
tests/test_data/config_file_ensemble_model_root_uses_tilde/: config.ini
tests/test_data/config_file_model_version/: config.ini
tests/test_data/filter_yolo/: Photo_1.txt  Photo_2.txt  Photo_3.txt  Photo_4.txt
tests/test_data/sample_data_repository_with_excluded/: subsets_excluded.txt
tests/yo_valuate/: test_as_classification.py  test_expected_values.py  test_reference_csv.py
tests/yo_wrangle/: test_common.py  test_external_tools.py
yo_ratchet/: modelling.py  validation.py  workflow.py
yo_ratchet/dataset_versioning/: __init__.py  git_helpers.py  push.py  tag.py  version.py
yo_ratchet/fiftyone_integration/: __init__.py  create.py  filter.py  helpers.py
yo_ratchet/open_labeling_integration/: launcher.py
yo_ratchet/user_interface/: backup_train_gui.py  find_errors_gui.py  find_outliers_gui.py  landing_gui.py  vcs_gui.py
yo_ratchet/yo_filter/: filter_central.py  filter_classes.py  filter_probability.py  filter_size.py  filters.py  unsupervised.py  unsupervised_experiments.py
yo_ratchet/yo_valuate/: aggregate.py  as_classification.py  expected_values.py  filtered_batch.py  reference_csv.py
yo_ratchet/yo_visualise/: polygon.py
yo_ratchet/yo_wrangle/: aggregated_annotations.py  augment.py  common.py  gcs_interface.py  mine.py  reaper.py  recode.py  stats.py  visualise.py  wrangle.py  wrangle_filtered.py
yo_wrangle/: WDRC_demo.py  common.py  dataset_versioning.py  discern.py  evaluate.py  evaluate_binary.py  external_tools.py  fiftyone_integration.py  recode.py  stats.py  visualise.py  workflow.py  wrangle.py  yo_valuate.py
yo_wrangle/dataset_versioning/: __init__.py  git_helpers.py
yo_wrangle/fiftyone_integration/: __init__.py  create.py  filter.py
yo_wrangle/user_interface/: landing_gui.py  vcs_gui.py
