[tool.poetry]
name = "yo-wrangle"
version = "0.2.1.a1"
description = "YOLO dataset improvement and wrangling tool."
authors = ["David MacNaughton <davidmacnaugh@gmail.com>"]
license = "MIT"
packages = [
    { include = "yo_wrangle" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fiftyone = "^0.14.2"
numpy = "~1.21"  # 1.21.4
pandas = "^1.3"  # 1.3.4
scipy = "^1.7"  # 1.7.2
opencv-python = "~4.5.4"  # 4.5.4.58
Pillow = "^8.4"
tabulate = "^0.8"  # 0.8.9
kaleido = "0.2.1"  # Should not be a primary dep. Added to solve issue with 0.2.1.post1
open-labeling = { path = ".wheels/open_labeling-0.2.3-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
