[tool.poetry]
name = "yo-laborate"
version = "1.0.2"
description = "YOLO dataset improvement and wrangling tool."
authors = ["David MacNaughton"]
license = "MIT"
packages = [
    { include = "yo_ratchet" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"  # ">=3.8,<3.11"
#fiftyone = "^0.21.6"  # ^0.14.2
#numpy = "^1.24.3"  # ~1.21  # 1.21.4
#pandas = "^2.0.3"  # "^1.3"  # 1.3.4
#scipy = "^1.10"   # "^1.7"  # 1.7.2 - included by tensorflow
opencv-python = "^4.8.0" #"~4.5.4"  # 4.5.4.58
Pillow = "^8.4"
# tabulate = ">=0.9"  # "^0.8"  # 0.8.9
kaleido = "0.2.1"  # Should not be a primary dep. Added to solve issue with 0.2.1.post1
open-labeling = { path = ".wheels/open_labeling-0.2.18-py3-none-any.whl"}
#seaborn = "^0.12.2"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow-cpu = [
    { version = ">=2.8.0", platform = 'win32' }
    ]
tensorflow = [
    { version = "^2.11.0", platform = 'linux' }
    ]  # "^2.8.0"




[tool.poetry.dev-dependencies]
# pytest = ">=6.2.5" - is a dependency of pytest-mock.
pytest-mock = "^3.11.1"  # ">=3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ratchet = "yo_ratchet.user_interface.landing_gui:launch_main_gui"
label_folder = "yo_ratchet.workflow:launch_open_labeling_folder_browser"
find_errors = "yo_ratchet.user_interface.find_errors_gui:launch_find_errors_config_window"
backup_train = "yo_ratchet.user_interface.backup_train_gui:backup_train_window"
edit_outliers = "yo_ratchet.workflow:launch_open_labeling_folder_browser"
